--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -8,6 +8,7 @@
 
 <body>
 {{>header}}
+<p>This site was created by Jordan Coates. It uses data from mapbox.com and weather.com.</p>
 <img src="./img/img1.png">
 </body>
 {{>footer}}
